src/app/components/Admin/admin.css
.adminPageContainer {
    margin-right: 2%;
    margin-left: 2%;
    margin-bottom: 0;
    padding: 0;
}
.addButtonContainer {
    padding-top: 5px;
    padding-block-end: 10px;
}

.cardContainer {
    padding-block-end: 10px;
}

.clickbox {
    margin: 2%;
    cursor: pointer;
}

.clickbox-link {
  all: unset;
}

.removeButtonContainer {
    float: left;
    margin-left: 5px;
}

.questionFormContainer {
    margin: 2%;
    margin-bottom: 0;
    display: flex;
    flex-direction: column;
    height: 100%;
}

.questionForm {
    height: 100%;
}

.stepContainer {
    margin-bottom: 1%;
}

.flaggedQuestionsContainer {
    margin: 2%;
    margin-top: 0;
}

@keyframes filterAnimationShow {
    from {
        width: 0px;
        border-color: 'transparent';
        border-width: 0px;
        padding: 0px;
    }
    to {
        width: 200px;
        border-color: 'grey';
        border-width: 1px;
        padding: 10px;
    }
}

.filterFieldShow {
    border-radius: 5px;
    font-size: 14;
    animation-name: filterAnimationShow;
    animation-duration: 0.2s;
    animation-fill-mode: forwards;
}

@keyframes filterAnimationHide {
    from {
        width: 200px;
        border-color: 'grey';
        border-width: 1px;
        padding: 10px;
    }
    to {
        width: 0px;
        border-color: 'transparent';
        border-width: 0px;
        padding: 0px;
    }
}

.filterFieldHide {
    border-radius: 5px;
    font-size: 14;
    animation-name: filterAnimationHide;
    animation-duration: 0.2s;
    animation-fill-mode: forwards;
}

.admin-courses {
  padding: 20px;
}

.group-form {
  display: flex;
}

.course-title-container {
  display: flex;
  align-items: center;
}

.course-info {
  display: flex;
  align-items: center;
}

.course-info :nth-child(2) {
  margin-left: 4px;
}

.course-groups {
  margin-top: 10px;
}

.conceptFormContainer {
    padding-top: 30px;
    margin: 2%;
    margin-bottom: 0;
    flex-direction: column;
    height: 100%;
}

